--- a/index.html
+++ b/index.html
@@ -5,56 +5,22 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Join our Telegram!</title>
-	
-	<style>
-		body {
-			background-color: #666666;
-			color: white;
-            font-family: Arial, sans-serif;
-            padding: 0;
-            margin: 0;
-			height: 100%;
-		}
-		#div-main {
-			background-color: #737373;
-			width: 100%;
-			height: 100vh;
-		}
-		.button-join-our-telegram {
-			background-color: green;
-			padding: 15px;
-			border: none;
-			border-radius: 6px;
-		}
-		.button-join-our-telegram a {
-			text-decoration: none;
-			color: white;
-		}
-		#description {
-            font-size: 24px;
-            margin: 20px;
-        }
-		#description span {
-			padding: 10px;
-			display: block;
-        }
-	</style>
+	<link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-<div align="center" id="div-main">
-	
-	<img src="tele.png" height="200" width="" style="padding: 5%;">
+		
+	<img id="img-main" src="tele.png" height="200">
 
-	<br>
-
-	<button class="button-join-our-telegram">
+	<div class="div-button-join">
 
 		<a href="https://t.me/+dP9lx5QiAxZkNTQ1">
-			JOIN OUR TELEGRAM
+		<button class="button-join">
+		<img src="tele.png" width="20"> JOIN OUR TELEGRAM
+		</button>
 		</a>
-		
-	</button>
+
+	</div>
 
 	<div id=description>
 
@@ -65,18 +31,17 @@
 
 	</div>
 
-	<button class="button-join-our-telegram">
+	<div class="div-button-join">
 
 		<a href="https://t.me/+dP9lx5QiAxZkNTQ1">
-			JOIN OUR TELEGRAM
+		<button class="button-join">
+		<img src="tele.png" width="20"> JOIN OUR TELEGRAM
+		</button>
 		</a>
-		
-	</button>
 
-	<p>
-		Join NOW for FREE!!
-	</p>
+	</div>
 
-</div>
+	<p>Join NOW for FREE!</p>
+
 </body>
 </html>
