--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 		
-	<img id="img-main" src="tele.png" height="200">
+	<img id="img-main" src="logo.png" height="200">
 
 	<div class="div-button-join">
 
@@ -25,9 +25,9 @@
 	<div id=description>
 
 		<span>✅Proper Risk Management✅</span>
-		<span>✅🤩Daily 3-4 Free Calls🤩✅</span>
+		<span>✅🤩Daily 3 - 4 Free Calls🤩✅</span>
 		<span>📋90-95% Accuracy📋</span>
-		<span>📈12+ Years Experience in Trading📈</span>
+		<span>📈12+ Years Experience📈</span>
 
 	</div>
 
@@ -41,7 +41,9 @@
 
 	</div>
 
-	<p>Join NOW for FREE!</p>
+	<footer id="footer">
+	Join NOW for FREE!
+	</footer>
 
 </body>
 </html>
