--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 		
-	<img id="img-main" src="logo.png" height="200">
+	<img id="img-main" src="logo.png" height="100">
 
 	<div class="div-button-join">
 
 		<a href="https://t.me/+dP9lx5QiAxZkNTQ1">
 		<button class="button-join">
-		<img src="tele.png" width="20"> JOIN OUR TELEGRAM
+		<img src="black-tele.png" width="20"> JOIN OUR TELEGRAM
 		</button>
 		</a>
 
@@ -35,7 +35,7 @@
 
 		<a href="https://t.me/+dP9lx5QiAxZkNTQ1">
 		<button class="button-join">
-		<img src="tele.png" width="20"> JOIN OUR TELEGRAM
+		<img src="black-tele.png" width="20"> JOIN OUR TELEGRAM
 		</button>
 		</a>
 
