--- a/stock-burner.html
+++ b/stock-burner.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 	
-	<img id="img-main-background" src="logo.png" width="200">
-	<img id="img-main" src="text.png" width="350">
+	<img id="img-main-background" src="stock-burner-logo.png" width="200">
+	<img id="img-main" src="stock-burner-text.png" width="350">
 
 	<div class="div-button-join">
 
