--- a/stock-burner.html
+++ b/stock-burner.html
@@ -15,7 +15,7 @@
 
 	<div class="div-button-join">
 
-		<a href="https://t.me/+dP9lx5QiAxZkNTQ1">
+		<a href="https://telegram.dog/+1psz6kg9J0pjYWZl">
 		<button class="button-join">
 		<img src="black-tele.png" width="20"> JOIN OUR TELEGRAM
 		</button>
@@ -34,7 +34,7 @@
 
 	<div class="div-button-join">
 
-		<a href="https://t.me/+dP9lx5QiAxZkNTQ1">
+		<a href="https://telegram.dog/+1psz6kg9J0pjYWZl">
 		<button class="button-join">
 		<img src="black-tele.png" width="20"> JOIN OUR TELEGRAM
 		</button>
